--- a/app/src/main/res/layout/guidesfrag.xml
+++ b/app/src/main/res/layout/guidesfrag.xml
@@ -13,7 +13,7 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rivered conditions"
+            android:text="Guid"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:textSize="20dp"/>
